[package]
name = "rustyray"
version = "0.1.0"
authors = ["Quasar Jarosz <quasar@ja.rosz.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "cucumber"
harness = false # allows cucumber to print output instead of libtest

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
